--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Pranesh S</p>
+        <p>&copy; 2025 sowmiya m</p>
     </footer>
 
     <script>
