--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="C:\Users\User\Desktop\nm\photo.html\WhatsApp Image 2025-03-16 at 8.11.26 PM.jpeg"Your Profile Picture" class="profile-picture">
+            <img src="photo.jpg"Your Profile Picture" class="profile-picture">
             <h1>sowmiya m</h1>
             <p>BCA student</p>
         </div>
@@ -163,7 +163,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="C:\Users\User\Desktop\nm\resume.html\Resume_20_03_2025_08_55_50_pm (3).pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
