--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src=""Your Profile Picture" class="profile-picture">
+            <img src="Screenshot_20250316-201058~2.png"Your Profile Picture" class="profile-picture">
             <h1>sowmiya m</h1>
             <p>BCA student</p>
         </div>
